hphp/hack/test/typecheck/case_type/recursive/union1.php.exp
ERROR: File "union1.php", line 4, characters 11-13:
Cyclic type definition (Typing[4014])
  File "union1.php", line 4, characters 24-29:
  Cyclic use is here
